log
Thu 21 Mar 2024 03:22:38 PM UTC: 
 tests:  0|5
total_score: 0/70
f02c204
Thu 21 Mar 2024 07:50:21 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
7a463f3
Thu 21 Mar 2024 07:52:14 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c9630ea
Thu 21 Mar 2024 07:56:23 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if(elem == dato)
      |             ^~
exercises.c:83:18: error: expected expression before ‘List’
   83 |       popCurrent(List *L);
      |                  ^~~~
cc1: all warnings being treated as errors
Compilation failed
5893317
Thu 21 Mar 2024 07:56:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:82:13: error: comparison between pointer and integer [-Werror]
   82 |     if(elem == dato)
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
c1dc2df
Thu 21 Mar 2024 07:57:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6e78b96
Thu 21 Mar 2024 08:04:35 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:98:22: error: ‘p1’ undeclared (first use in this function); did you mean ‘P1’?
   98 |   void* dato = first(p1);
      |                      ^~
      |                      P1
exercises.c:98:22: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:105:10: error: ‘p2’ undeclared (first use in this function); did you mean ‘P2’?
  105 |     push(p2, dato);
      |          ^~
      |          P2
Compilation failed
9e7ad39
Thu 21 Mar 2024 08:04:51 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:98:22: error: ‘p1’ undeclared (first use in this function); did you mean ‘P1’?
   98 |   void* dato = first(p1);
      |                      ^~
      |                      P1
exercises.c:98:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c1eb20e
Thu 21 Mar 2024 08:05:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
1d0526c
Thu 21 Mar 2024 08:36:40 PM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:22: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  121 |   char* dato = first(cadena);
      |                      ^~~~~~
      |                      |
      |                      char *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char *’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:130:21: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  130 |         dato = next(cadena);
      |                     ^~~~~~
      |                     |
      |                     char *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘char *’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
cf98094
Thu 21 Mar 2024 08:36:51 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:22: error: passing argument 1 of ‘first’ makes pointer from integer without a cast [-Werror=int-conversion]
  121 |   char* dato = first(*cadena);
      |                      ^~~~~~~
      |                      |
      |                      char
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:130:21: error: passing argument 1 of ‘next’ makes pointer from integer without a cast [-Werror=int-conversion]
  130 |         dato = next(*cadena);
      |                     ^~~~~~~
      |                     |
      |                     char
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:14:18: note: expected ‘List *’ but argument is of type ‘char’
   14 | void* next(List *L);
      |            ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
f303214
Thu 21 Mar 2024 08:40:54 PM UTC: 
 exercises.c | 18 ++++++------------
 1 file changed, 6 insertions(+), 12 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:22: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  121 |   char* dato = first(cadena);
      |                      ^~~~~~
      |                      |
      |                      char *
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:10:19: note: expected ‘List *’ but argument is of type ‘char *’
   10 | void* first(List *L);
      |             ~~~~~~^
In file included from test.c:5:
exercises.c:124:27: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
  124 |       pushBack(aux, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘char’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
In file included from test.c:5:
exercises.c:121:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  121 |   char* dato = first(cadena);
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
e2b85d2
Thu 21 Mar 2024 08:41:11 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:123:27: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
  123 |       pushBack(aux, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:20:30: note: expected ‘void *’ but argument is of type ‘char’
   20 | void pushBack(List *L, void *dato);
      |                        ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
54fd118
Thu 21 Mar 2024 08:42:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:123:21: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
  123 |       pushBack(aux, (void*)cadena[i]);
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
32e6bfe
Thu 21 Mar 2024 08:43:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:123:48: error: expected ‘)’ before ‘;’ token
  123 |       pushBack(aux, (void*)malloc(sizeof(char));
      |               ~                                ^
      |                                                )
exercises.c:128:6: error: expected ‘;’ before ‘}’ token
  128 |     }
      |      ^
      |      ;
  129 |   }
      |   ~   
Compilation failed
cdd3b6f
Thu 21 Mar 2024 08:43:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
eb883dc
Thu 21 Mar 2024 08:44:38 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  130 |   if(aux == NULL) return 1;)
      |   ^~
exercises.c:130:28: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  130 |   if(aux == NULL) return 1;)
      |                            ^
exercises.c:130:28: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
1d56072
Thu 21 Mar 2024 08:44:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
678647a
Thu 21 Mar 2024 08:48:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
e846f69
